# cmem-plugin-databus

./: .copier-answers.env  .copier-answers.yml  .flake8  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README-public.md  README.md  Taskfile.yaml  pyproject.toml
.github/workflows/: check.yml  publish.yml
cmem_plugin_databus/: __init__.py  cmem_utils.py  cmem_wrappers.py  databus_utils.py  loader.py  publisher.py  utils.py
tests/: test_databus.py  test_loader.py  utils.py
