[tool.poetry]
name = "cmem-plugin-databus"
version = "0.0.0"
license = "Apache-2.0"
description = "Load and publish datasets from a DBpedia databus service."
authors = ["Denis Streitmatter <streitmatter@informatik.uni-leipzig.de>"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Plugins",
    "Topic :: Software Development :: Libraries :: Python Modules"
]
readme = "README-public.md"
keywords = [
    "eccenca Corporate Memory", "plugin"
]
homepage = "https://github.com/dbpedia/cmem-plugin-databus"

[tool.poetry.dependencies]
python = "^3.11"
cmem-plugin-base = "^4.0.0"
databusclient = "0.8"
SPARQLWrapper = "^2.0.0"


[tool.poetry.group.dev.dependencies]
bandit = "^1.7.5"
black = "^23.3.0"
coverage = "^7.2.3"
defusedxml = "^0.7.1"
flake8-formatter-junit-xml = "^0.0.6"
genbadge = "^1.1.0"
mypy = "^1.2.0"
pillow = "^9.5.0"
pylint-junit = "^0.3.2"
pytest = "^7.3.1"
pytest-cov = "^4.0.0"
pytest-memray = "^1.4.0"
safety = "^1.10.3"
typed-ast = "^1.5.4"
wheel = "^0.38.4"
types-requests = "^2.28.10"

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning"]
build-backend = "poetry_dynamic_versioning.backend"

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
dirty = true

[tool.pylint.MASTER]
load-plugins="pylint_junit"

[tool.pylint.General]
ignore = "version.py"

[tool.pylint.'MESSAGES CONTROL']
extension-pkg-whitelist = "pydantic"
disable = "fixme"

# https://black.readthedocs.io/en/stable/guides/using_black_with_other_tools.html#pylint
[tool.pylint.messages_control]
disable = "R0903"

[tool.pylint.format]
max-line-length = "88"

[tool.mypy]
warn_return_any = true
ignore_missing_imports = true

[tool.pytest.ini_options]
addopts = ""

