[tool.poetry]
name = "cmem-plugin-databus"
version = "0.0.0"
license = "Apache-2.0"
description = "Load and publish datasets from a DBpedia databus service."
authors = ["Denis Streitmatter <streitmatter@informatik.uni-leipzig.de>"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Plugins",
    "Topic :: Software Development :: Libraries :: Python Modules"
]
readme = "README-public.md"
keywords = [
    "eccenca Corporate Memory", "plugin"
]
homepage = "https://github.com/dbpedia/cmem-plugin-databus"

[tool.poetry.dependencies]
# if you need to change python version here, change it also in .python-version
python = "^3.11"
databusclient = "0.8"
SPARQLWrapper = "^2.0.0"

[tool.poetry.dependencies.cmem-plugin-base]
version = "^4.3.0"
allow-prereleases = false

[tool.poetry.group.dev.dependencies]
genbadge = {extras = ["coverage"], version = "^1.1.1"}
mypy = "^1.2.0"
pip = ">=23.3" # Avoid safety issue 62044 for pip less than 23.3
pytest = "^7.3.1"
pytest-cov = "^4.1.0"
pytest-dotenv = "^0.5.2"
pytest-memray = { version = "^1.5.0",  markers = "platform_system != 'Windows'" }
ruff = "^0.1.5"
safety = "^1.10.3"
typed-ast = "^1.5.4"
types-requests = "^2.28.10"

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning"]
build-backend = "poetry_dynamic_versioning.backend"

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
dirty = true
bump = true

[tool.mypy]
warn_return_any = true
ignore_missing_imports = true

[tool.pytest.ini_options]
addopts = ""

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.format]
line-ending = "lf" # Use `\n` line endings for all files

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "ANN101",  # Missing type annotation for self in method
    "ANN204",  # Missing return type annotation for special method `__init__`
    "COM812",  # missing-trailing-comma
    "D107",    # Missing docstring in __init__
    "D203",    # [*] 1 blank line required before class docstring
    "D211",    # No blank lines allowed before class docstring
    "D213",    # Multi-line docstring summary should start at the second line
    "D400",    # First line should end with a period
    "D415",    # First line should end with a period, question mark, or exclamation point
    "EM",      # Exception texts - https://docs.astral.sh/ruff/rules/#flake8-errmsg-em
    "FBT",     # The Boolean Trap - https://docs.astral.sh/ruff/rules/#flake8-boolean-trap-fbt
    "FIX002",  # Allow to add TODO notes in the code
    "G004",    # Logging statement uses f-string
    "ISC001",  # single-line-implicit-string-concatenation
    "PD",      # opinionated linting for pandas code
    "S101",    # use of assert detected
    "TRY003",  # Avoid specifying long messages outside the exception class
]

